feat: add support for missing CLI functions through custom binary
Signed-off-by: jchrist <jchrist@cytech.gr>